--- a/Kozmetika_KLIJENT/src/forme/LoginForma.form
+++ b/Kozmetika_KLIJENT/src/forme/LoginForma.form
@@ -61,8 +61,8 @@
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="btnLogin" min="-2" pref="79" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="btnLogin" min="-2" pref="85" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="btnCancel" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Component id="txtUsername" alignment="0" max="32767" attributes="0"/>
