--- a/Kozmetika_KLIJENT/src/formeKupca/FrmNoviKupac.form
+++ b/Kozmetika_KLIJENT/src/formeKupca/FrmNoviKupac.form
@@ -64,10 +64,10 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jLabel1" alignment="0" min="-2" pref="37" max="-2" attributes="0"/>
-                                      <Component id="jLabel2" alignment="0" min="-2" pref="48" max="-2" attributes="0"/>
+                                      <Component id="jLabel1" min="-2" pref="37" max="-2" attributes="0"/>
+                                      <Component id="jLabel2" min="-2" pref="59" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="txtIme" max="32767" attributes="0"/>
                                       <Component id="txtPrezime" alignment="0" min="-2" pref="183" max="-2" attributes="0"/>
